--- a/Kobush.Build.csproj
+++ b/Kobush.Build.csproj
@@ -62,6 +62,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XmlLogger.cs" />
+    <Compile Include="XmlLoggerAttributes.cs" />
+    <Compile Include="XmlLoggerElements.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
